--- a/app/scss/sections/home-page/home-popular-categories.scss
+++ b/app/scss/sections/home-page/home-popular-categories.scss
@@ -4,10 +4,13 @@
 		display: grid;
 		grid-gap: toRem(24) toRem(10);
 		grid-template-columns: repeat(auto-fill, minmax(toRem(250), 1fr));
-		
+
 		@media (max-width: toRem(560)) {
 			grid-gap: toRem(10);
 			grid-template-columns: repeat(auto-fill, minmax(toRem(200), 1fr));
+		}
+		@media (max-width: toRem(439.98)) {
+			grid-gap: toRem(25);
 		}
 	}
 }
